# memprofiler-1

./: .gitignore  LICENSE  README.md  run.sh  setup.sh  setup_env.sh
Analyzer/: .gitignore  README.md  analysis.py  common_types.py  config.py  main.py  output_handler.py  parser_core.py  pyproject.toml  snapshot_manager.py  utils.py
Analyzer/script/: run_analyzer.sh
Analyzer/visualizer/: memory_visualizer.py  metrics_plotter.py  patchMatplotlib.py
Tracer/: CMakeLists.txt  README.md
Tracer/script/: build.sh
Tracer/src/: CMakeLists.txt  config.cpp  config.h  debugger.h  main.cpp  target_loader.cpp  target_loader.h  trace_data.cpp  trace_data.h  tracer.cpp  tracer.h  utils.h  zip_stream.cpp  zip_stream.h
Tracer/test/: CMakeLists.txt  test_allocs.cpp  test_case.cpp  test_child_thread.c  test_clone.cpp  test_cpp.cpp  test_cpp_newanddelete.cpp  test_loaddata.cpp  test_mallocandfree.c  test_project_child.cpp  test_project_parent.h  test_threads.c
